peac_dev/force-app/main/default/objects/Rate_Card_Row__c/Rate_Card_Row__c.object-meta.xml
<CustomObject>
    <label>Rate Card Row</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Card Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>