peac_dev/force-app/main/default/objects/Rate_Card_Row__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>The order that the row should appear in the rate card rows. For ex, the first row would have a 1. This drives how the rate card matrix appears.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>