peac_dev/force-app/main/default/objects/Rate_Card_Row__c/fields/Row_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Row_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The set of conditions used to determine if the transaction meets the criteria of the row.</inlineHelpText>
    <label>Row Criteria</label>
    <referenceTo>TCRE__Rule_Config__c</referenceTo>
    <relationshipLabel>Rate Card Rows</relationshipLabel>
    <relationshipName>Rate_Card_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>